services/traefik/internal/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-internal
  namespace: kube-system
  labels:
    k8s-app: traefik-internal
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-internal
  template:
    metadata:
      labels:
        k8s-app: traefik-internal
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-internal
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --configfile=/config/traefik.toml
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: traefik-internal
      volumes:
      - name: traefik-internal
        configMap:
          name: traefik-internal
