services/traefik/internal/manifest.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-internal
  namespace: kube-system
  labels:
    k8s-app: traefik-internal
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-internal
  template:
    metadata:
      labels:
        k8s-app: traefik-internal
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-internal
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --configfile=/config/traefik.toml
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: traefik-internal
      volumes:
      - name: traefik-internal
        configMap:
          name: traefik-internal
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-internal
  namespace: kube-system
  labels:
    k8s-app: traefik-internal
spec:
  selector:
    k8s-app: traefik-internal
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 192.168.2.101
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-internal
  namespace: kube-system
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: traefik-int.internal.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: traefik-internal
          servicePort: admin
